src/test/rustdoc-ui/check-attr.stderr
error: unknown attribute `compile-fail`. Did you mean `compile_fail`?
  --> $DIR/check-attr.rs:3:1
   |
LL | / /// foo
LL | |
LL | |
LL | |
...  |
LL | | /// boo
LL | | /// ```
   | |_______^
   |
note: the lint level is defined here
  --> $DIR/check-attr.rs:1:9
   |
LL | #![deny(rustdoc::invalid_codeblock_attributes)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = help: the code block will either not be tested if not marked as a rust one or won't fail if it compiles successfully

error: unknown attribute `compilefail`. Did you mean `compile_fail`?
  --> $DIR/check-attr.rs:3:1
   |
LL | / /// foo
LL | |
LL | |
LL | |
...  |
LL | | /// boo
LL | | /// ```
   | |_______^
   |
   = help: the code block will either not be tested if not marked as a rust one or won't fail if it compiles successfully

error: unknown attribute `comPile_fail`. Did you mean `compile_fail`?
  --> $DIR/check-attr.rs:3:1
   |
LL | / /// foo
LL | |
LL | |
LL | |
...  |
LL | | /// boo
LL | | /// ```
   | |_______^
   |
   = help: the code block will either not be tested if not marked as a rust one or won't fail if it compiles successfully

error: unknown attribute `should-panic`. Did you mean `should_panic`?
  --> $DIR/check-attr.rs:13:1
   |
LL | / /// bar
LL | |
LL | |
LL | |
...  |
LL | | /// boo
LL | | /// ```
   | |_______^
   |
   = help: the code block will either not be tested if not marked as a rust one or won't fail if it doesn't panic when running

error: unknown attribute `shouldpanic`. Did you mean `should_panic`?
  --> $DIR/check-attr.rs:13:1
   |
LL | / /// bar
LL | |
LL | |
LL | |
...  |
LL | | /// boo
LL | | /// ```
   | |_______^
   |
   = help: the code block will either not be tested if not marked as a rust one or won't fail if it doesn't panic when running

error: unknown attribute `sHould_panic`. Did you mean `should_panic`?
  --> $DIR/check-attr.rs:13:1
   |
LL | / /// bar
LL | |
LL | |
LL | |
...  |
LL | | /// boo
LL | | /// ```
   | |_______^
   |
   = help: the code block will either not be tested if not marked as a rust one or won't fail if it doesn't panic when running

error: unknown attribute `no-run`. Did you mean `no_run`?
  --> $DIR/check-attr.rs:23:1
   |
LL | / /// foobar
LL | |
LL | |
LL | |
...  |
LL | | /// boo
LL | | /// ```
   | |_______^
   |
   = help: the code block will either not be tested if not marked as a rust one or will be run (which you might not want)

error: unknown attribute `norun`. Did you mean `no_run`?
  --> $DIR/check-attr.rs:23:1
   |
LL | / /// foobar
LL | |
LL | |
LL | |
...  |
LL | | /// boo
LL | | /// ```
   | |_______^
   |
   = help: the code block will either not be tested if not marked as a rust one or will be run (which you might not want)

error: unknown attribute `no_Run`. Did you mean `no_run`?
  --> $DIR/check-attr.rs:23:1
   |
LL | / /// foobar
LL | |
LL | |
LL | |
...  |
LL | | /// boo
LL | | /// ```
   | |_______^
   |
   = help: the code block will either not be tested if not marked as a rust one or will be run (which you might not want)

error: unknown attribute `test-harness`. Did you mean `test_harness`?
  --> $DIR/check-attr.rs:33:1
   |
LL | / /// b
LL | |
LL | |
LL | |
...  |
LL | | /// boo
LL | | /// ```
   | |_______^
   |
   = help: the code block will either not be tested if not marked as a rust one or the code will be wrapped inside a main function

error: unknown attribute `testharness`. Did you mean `test_harness`?
  --> $DIR/check-attr.rs:33:1
   |
LL | / /// b
LL | |
LL | |
LL | |
...  |
LL | | /// boo
LL | | /// ```
   | |_______^
   |
   = help: the code block will either not be tested if not marked as a rust one or the code will be wrapped inside a main function

error: unknown attribute `teSt_harness`. Did you mean `test_harness`?
  --> $DIR/check-attr.rs:33:1
   |
LL | / /// b
LL | |
LL | |
LL | |
...  |
LL | | /// boo
LL | | /// ```
   | |_______^
   |
   = help: the code block will either not be tested if not marked as a rust one or the code will be wrapped inside a main function

error: aborting due to 12 previous errors

